@@ -540,6 +540,16 @@ DWORD WINAPI MprConfigTransportEnum(HANDLE,DWORD,LPBYTE*,DWORD,LPDWORD,LPDWORD,L
 DWORD WINAPI MprConfigTransportGetHandle(HANDLE,DWORD,HANDLE*);
 DWORD WINAPI MprConfigTransportGetInfo(HANDLE,HANDLE,LPBYTE*,LPDWORD,LPBYTE*,LPDWORD,LPWSTR*);
 DWORD WINAPI MprConfigTransportSetInfo(HANDLE,HANDLE,LPBYTE,DWORD,LPBYTE,DWORD,LPWSTR);
+/*--- Router Management Reference - Information Header Functions */
+DWORD WINAPI MprInfoBlockAdd(LPVOID,DWORD,DWORD,DWORD,LPBYTE,LPVOID*);
+DWORD WINAPI MprInfoBlockFind(LPVOID,DWORD,LPDWORD,LPDWORD,LPBYTE*);
+DWORD WINAPI MprInfoBlockQuerySize(LPVOID);
+DWORD WINAPI MprInfoBlockRemove(LPVOID,DWORD,LPVOID*);
+DWORD WINAPI MprInfoBlockSet(LPVOID,DWORD,DWORD,DWORD,LPBYTE,LPVOID*);
+DWORD WINAPI MprInfoCreate(DWORD,LPVOID*);
+DWORD WINAPI MprInfoDelete(LPVOID);
+DWORD WINAPI MprInfoDuplicate(LPVOID,LPVOID*);
+DWORD WINAPI MprInfoRemoveAll(LPVOID,LPVOID*);
 #endif /* (_WIN32_WINNT >= 0x0500) */
 
 #ifdef __cplusplus
